tests/ui/cve_2020_35892_3/cve_2020_35892_3.stderr
note: Adt pattern matched
  --> tests/ui/cve_2020_35892_3/cve_2020_35892_3.rs:6:1
   |
LL | pub struct Slab<T> {
   | ^^^^^^^^^^^^^^^^^^

error: pointer out of bound
  --> tests/ui/cve_2020_35892_3/cve_2020_35892_3.rs:51:25
   |
LL |             last_elem_ptr = self.mem.offset(self.len as isize);
   |                                      -------------------------
   |                                      |      |
   |                                      |      help: did you mean this: `(self.len - 1)`
   |                                      pointer created here
...
LL |             last_elem = ptr::read(last_elem_ptr);
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^ pointer read here
   |
help: this is because `self.len` exceeds the container's length by one
  --> tests/ui/cve_2020_35892_3/cve_2020_35892_3.rs:46:45
   |
LL |             last_elem_ptr = self.mem.offset(self.len as isize);
   |                                             ^^^^^^^^

error: aborting due to 1 previous error

